# napari-time-series-plotter

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: config.yml
demo_videos/: TSP_Inspector_demo.webm  TSP_Points_plotting_demo.webm  TSP_ROI_plotting_demo.webm  TSP_basic_and_voxel_plotting_demo.webm
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
src/napari_time_series_plotter/: __init__.py  _dock_widget.py  _utils.py  _widgets.py  dock_widget.py  dock_widgets.py  models.py  napari.yaml  utils.py  widgets.py
src/napari_time_series_plotter/_tests/: test_dock_widget.py  test_dock_widgets.py  test_utils.py  test_widgets.py
src/napari_timeseries_viewer/: __init__.py  _dock_widget.py
src/napari_timeseries_viewer/_tests/: test_dock_widget.py  test_function.py
