[metadata]
name = napari-time_series_plotter
author = Christopher Nauroth-Kress
author_email = nauroth_C@ukw.de
url = https://github.com/ch-n/napari-time_series_plotter
license = BSD-3-Clause
description = A Plugin for napari to visualize pixel values over the first dimension (time -> t+3D, t+2D) as graphs.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/ch-n/napari-time_series_plotter/issues
    Documentation = https://github.com/ch-n/napari-time_series_plotter#README.md
    Source Code = https://github.com/ch-n/napari-time_series_plotter
    User Support = https://github.com/ch-n/napari-time_series_plotter/issues

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.2.0
    napari_matplotlib
    numpy
    qtpy

[options.extras_require]
test =
    tox
    pytest
    pytest-cov
    pytest-qt
    napari
    pyqt5

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-time_series_plotter = napari_time_series_plotter:napari.yaml

[options.package_data]
* = *.yaml
